--- a/index.html
+++ b/index.html
@@ -57,10 +57,25 @@
     var map = L.map('map', {
       center: [0, 0],
       zoom: 1,
-      scrollWheelZoom: false,
-      zoomControl: false,
+      scrollWheelZoom: true,
+      zoomControl: true,
       tap: false
     });
+    var highlightLayer;
+        function highlightFeature(e) {
+            highlightLayer = e.target;
+
+            if (e.target.feature.geometry.type === 'LineString') {
+              highlightLayer.setStyle({
+                color: '#ffff00',
+              });
+            } else {
+              highlightLayer.setStyle({
+                fillColor: '#ffff00',
+                fillOpacity: 1
+              });
+            }
+        }
   </script>
 
   <script type="text/javascript" src="google-doc-url.js"></script>
