--- a/index.html
+++ b/index.html
@@ -36,16 +36,7 @@
   <link rel="stylesheet" href="css/loader.css">
   
   <!-- Load Data -->
-  <script src="js/qgis2web_expressions.js"></script>
-  <script src="js/leaflet.js"></script>
-  <script src="js/leaflet.rotatedMarker.js"></script>
-  <script src="js/leaflet.pattern.js"></script>
-  <script src="js/leaflet-hash.js"></script>
-  <script src="js/Autolinker.min.js"></script>
-  <script src="js/rbush.min.js"></script>
-  <script src="js/labelgun.min.js"></script>
-  <script src="js/labels.js"></script>
-  <script src="geojson/TheLandBetwee.geojson"></script>
+  <script src="geojson/TheLandBetween.geojson"></script>
 </head>
 
 <body>
@@ -90,7 +81,7 @@
         map.createPane('pane_TheLandBetween_CLCC_3');
         map.getPane('pane_TheLandBetween_CLCC_3').style.zIndex = 403;
         map.getPane('pane_TheLandBetween_CLCC_3').style['mix-blend-mode'] = 'normal';
-        var layer_TheLandBetween_CLCC_3 = new L.geoJson(json_TheLandBetween_CLCC_3, {
+        var layer_TheLandBetween_CLCC_3 = new L.geoJson(geojson/TheLandBetween.geojson, {
             attribution: '',
             interactive: false,
             dataVar: 'json_TheLandBetween_CLCC_3',
