--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         map.createPane('pane_TheLandBetween_CLCC_3');
         map.getPane('pane_TheLandBetween_CLCC_3').style.zIndex = 403;
         map.getPane('pane_TheLandBetween_CLCC_3').style['mix-blend-mode'] = 'normal';
-        var layer_TheLandBetween_CLCC_3 = new L.geoJson(geojson/TheLandBetween.geojson, {
+        var layer_TheLandBetween_CLCC_3 = new L.geoJson(json_TheLandBetween_CLCC_3, {
             attribution: '',
             interactive: false,
-            dataVar: 'json_TheLandBetween_CLCC_3',
+            dataVar: 'geojson/TheLandBetween.geojson',
             layerName: 'layer_TheLandBetween_CLCC_3',
             pane: 'pane_TheLandBetween_CLCC_3',
             onEachFeature: pop_TheLandBetween_CLCC_3,
