--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         map.createPane('pane_TheLandBetween_CLCC_3');
         map.getPane('pane_TheLandBetween_CLCC_3').style.zIndex = 403;
         map.getPane('pane_TheLandBetween_CLCC_3').style['mix-blend-mode'] = 'normal';
-        var layer_TheLandBetween_CLCC_3 = new L.geoJson(json_TheLandBetween_CLCC_3, {
+        var layer_TheLandBetween_CLCC_3 = new L.geoJson(geojson/TheLandBetween.geojson, {
             attribution: '',
             interactive: false,
             dataVar: 'geojson/TheLandBetween.geojson',
